Zaległy commit z kolejną porcją konsultacji

--- a/sprawozdanie1/part1-trees.tex
+++ b/sprawozdanie1/part1-trees.tex
@@ -58,7 +58,11 @@ outlook = rain:
 	\\Dokonano konsultacji przykładu o wartościach atrybutów: outlook = overcast, temperature = 5, humidity = 100, windy = true. W wyniku konsultacji podanego przykładu otrzymano decyzję "Play". Poneważ wartości atrybutów zostały podane w sposób deterministyczny to decyzja ta była pewna (prawdopodobieństwo, że analizowany przykład należy do klasy "Play" wynosiło 1). Wynik jest zgodny z oczekiwaniami, poniważ wygenerowane drzewo decyzyjne na podstawi galęzi "Outlook = overcast" przydziela wszystkie przykłady z taką wartością atrybutu do klasy "Don't play", niezależnie od wartości pozostałych atrybutów.
 	
 \item Konsultowanie przykładu ,,niepełnego''; dokładnie przeanalizuj wynik.
-	\\Przykład niepełny miał postać: (overcast = sunny, temperature = 15, humidity = ?, windy = false). C 4.5 zaklasyfikował go do klasy "Don't Play". Prawdopodobieństwo poprawnej klasyfikacj wyniosło 0.6. Stało się tak dlateogo, że w przykładzie nie podano wartości na atrybucie humidity, która dla przykładów o wartości overlook równej sunny rozstrzyga o klasyfikacji. Przydział został dokonany na podstawie klasy większościowej wśród przykladów, które tak jak omawiany przykład mają wartość atrybutu "overcast" wynoszącą "sunny". Przykładów tych jest 5, przy czym 2 "Play" a pozostałe 3 ($$ 60% $$)  do klasy "Don't Play". Stąd, ponieważ przeważają przykłady z decyzją "Play", do tej klasy zaliczony został nasz konsultowany przykład, z prawdopodobieństwem $$ 60% $$. Jest to estymowane prawdopodobieństwo, że ...
+	\\Przykład niepełny miał postać: (overcast = sunny, temperature = 15, humidity = ?, windy = false). Przechodząc ścieżkę klasyfikującą ten przykład dochodzimy do atrybutu humidity. Nie jest znana wartość analizowanego przykładu na tym atrybucie, więc zostają obliczone prawdopodobieństwa przyjęcia konkretnych wartości. W analizowanym węźle (za gałęzią "sunny") znajduje się 5 przykładów uczących, w tym 2 ($$ 40% $$) przyjmują wartość "humidity" większą niż $$ 75% $$ a 3 ($$ 60% $$) mniejszą. Dlatego przyjmuje się, że analizowany przykład będzie miał z prawdopodobieństwem $$ 60% $$ wartość humidity większą niż $$ 75% $$ a mniejszą z prawdopodobieństwem $$ 40% $$. Dalej w drzewie sa juz tylko liście, można więc obliczyć rpawdopodobieństwo całych kompletów wartości: z prawdopodobieństwem $$ 40% $$ analizowany przykład przyjmie wartości (overcast = sunny, temperature = 15, humidity > $$ 75% $$, windy = false) a z prawdopodobieństwem $$ 60% $$ wartości  (overcast = sunny, temperature = 15, humidity > $$ 75% $$, windy = false). Drugie prawdopodobieństwo jest wyższe, więc z prawdopodobieństwem $$ 60% $$ konsultowany przykład zostaje przypisany do klasy "Don't Play".
+	
+	
+	
+	 C 4.5 zaklasyfikował go do klasy "Don't Play". Prawdopodobieństwo poprawnej klasyfikacj wyniosło 0.6. Stało się tak dlatego, że w przykładzie nie podano wartości na atrybucie humidity, która dla przykładów o wartości overlook równej sunny rozstrzyga o klasyfikacji. Przydział został dokonany na podstawie klasy większościowej wśród przykladów, które tak jak omawiany przykład mają wartość atrybutu "overcast" wynoszącą "sunny". Przykładów tych jest 5, przy czym 2 "Play" a pozostałe 3 ($$ 60% $$)  do klasy "Don't Play". Stąd, ponieważ przeważają przykłady z decyzją "Play", do tej klasy zaliczony został nasz konsultowany przykład, z prawdopodobieństwem $$ 60% $$. Jest to estymowane prawdopodobieństwo, że ...
 	$$ 40% $$) należą do 
 	
 \item Konsultowanie, gdy znany jest rozkład prawdopodobieństwa.
