Coś tam dopisałem i walczę z błędami kompilacji

--- a/sprawozdanie1/part1-trees.tex
+++ b/sprawozdanie1/part1-trees.tex
@@ -39,8 +39,8 @@ outlook = rain:
 \item \textbf{Obejrzyj drzewo; ile ma węzłów decyzyjnych, a~ile liści?}
 	\\Wygenerowane drzewo ma 3 węzły decyzyjne i 5 liści.
 
-\item \textbf{ Prześledź ścieżkę od korzenia do wybranego liścia.
-}		\\W korzeniu znajduje się test związany z atrybutem outlook. Jeśli dla klasyfikowanego przykładu wartość atrybutu outlook wynosi "sunny", to następny węzeł na ścieżce to ten związany z atrybutem humidity. Zakłądając, że dla omawianego przykładu wilgotność jest większ niż $ 75\% $ , liściem w analizowanej ścieżce będzie liść odnoszący się decyzji "Don't Play".
+\item \textbf{ Prześledź ścieżkę od korzenia do wybranego liścia.}
+		\\W korzeniu znajduje się test związany z atrybutem outlook. Jeśli dla klasyfikowanego przykładu wartość atrybutu outlook wynosi "sunny", to następny węzeł na ścieżce to ten związany z atrybutem humidity. Zakłądając, że dla omawianego przykładu wilgotność jest większ niż $ 75\% $ , liściem w analizowanej ścieżce będzie liść odnoszący się decyzji "Don't Play".
 		\\Inaczej mówiąc, ścieżk ta klasyfikuje wszystkie dni w które jest słoneczna pogoda i wilgotność większa niż $ 75\% $ jako dni, w które nie gra się w golfa.
 		
 \item \textbf{Porównaj estymaty błędu dla drzewa oryginalnego (\emph{Unpruned}) i~uproszczonego (\emph{Pruned}).}
@@ -58,14 +58,11 @@ outlook = rain:
 	\\Dokonano konsultacji przykładu o wartościach atrybutów: outlook = overcast, temperature = 5, humidity = 100, windy = true. W wyniku konsultacji podanego przykładu otrzymano decyzję "Play". Poneważ wartości atrybutów zostały podane w sposób deterministyczny to decyzja ta była pewna (prawdopodobieństwo, że analizowany przykład należy do klasy "Play" wynosiło 1). Wynik jest zgodny z oczekiwaniami, poniważ wygenerowane drzewo decyzyjne na podstawi galęzi "Outlook = overcast" przydziela wszystkie przykłady z taką wartością atrybutu do klasy "Don't play", niezależnie od wartości pozostałych atrybutów.
 	
 \item Konsultowanie przykładu ,,niepełnego''; dokładnie przeanalizuj wynik.
-	\\Przykład niepełny miał postać: (overcast = sunny, temperature = 15, humidity = ?, windy = false). Przechodząc ścieżkę klasyfikującą ten przykład dochodzimy do atrybutu humidity. Nie jest znana wartość analizowanego przykładu na tym atrybucie, więc zostają obliczone prawdopodobieństwa przyjęcia konkretnych wartości. W analizowanym węźle (za gałęzią "sunny") znajduje się 5 przykładów uczących, w tym 2 ($$ 40% $$) przyjmują wartość "humidity" większą niż $$ 75% $$ a 3 ($$ 60% $$) mniejszą. Dlatego przyjmuje się, że analizowany przykład będzie miał z prawdopodobieństwem $$ 60% $$ wartość humidity większą niż $$ 75% $$ a mniejszą z prawdopodobieństwem $$ 40% $$. Dalej w drzewie sa juz tylko liście, można więc obliczyć rpawdopodobieństwo całych kompletów wartości: z prawdopodobieństwem $$ 40% $$ analizowany przykład przyjmie wartości (overcast = sunny, temperature = 15, humidity > $$ 75% $$, windy = false) a z prawdopodobieństwem $$ 60% $$ wartości  (overcast = sunny, temperature = 15, humidity > $$ 75% $$, windy = false). Drugie prawdopodobieństwo jest wyższe, więc z prawdopodobieństwem $$ 60% $$ konsultowany przykład zostaje przypisany do klasy "Don't Play".
-	
-	
-	
-	 C 4.5 zaklasyfikował go do klasy "Don't Play". Prawdopodobieństwo poprawnej klasyfikacj wyniosło 0.6. Stało się tak dlatego, że w przykładzie nie podano wartości na atrybucie humidity, która dla przykładów o wartości overlook równej sunny rozstrzyga o klasyfikacji. Przydział został dokonany na podstawie klasy większościowej wśród przykladów, które tak jak omawiany przykład mają wartość atrybutu "overcast" wynoszącą "sunny". Przykładów tych jest 5, przy czym 2 "Play" a pozostałe 3 ($$ 60% $$)  do klasy "Don't Play". Stąd, ponieważ przeważają przykłady z decyzją "Play", do tej klasy zaliczony został nasz konsultowany przykład, z prawdopodobieństwem $$ 60% $$. Jest to estymowane prawdopodobieństwo, że ...
-	$$ 40% $$) należą do 
+	\\Przykład niepełny miał postać: (overcast = sunny, temperature = 15, humidity = ?, windy = false). Przechodząc ścieżkę klasyfikującą ten przykład dochodzimy do atrybutu humidity. Nie jest znana wartość analizowanego przykładu na tym atrybucie, więc zostają obliczone prawdopodobieństwa przyjęcia konkretnych wartości. W analizowanym węźle (za gałęzią "sunny") znajduje się 5 przykładów uczących, w tym 2 ( $ 40\% $ ) przyjmują wartość "humidity" większą niż $ 75\% $ a 3  $ ( 60\% ) $ mniejszą. Dlatego przyjmuje się, że analizowany przykład będzie miał z prawdopodobieństwem $ 60\% $ wartość humidity większą niż $ 75\% $ a mniejszą z prawdopodobieństwem $ 40\% $ .	Dalej w drzewie sa juz tylko liście, można więc obliczyć rpawdopodobieństwo całych kompletów wartości: z prawdopodobieństwem $ 40\% $ analizowany przykład przyjmie wartości (overcast = sunny, temperature = 15, humidity  $ > 75\% $, windy = false) a z prawdopodobieństwem $ 60\% $ wartości  (overcast = sunny, temperature = 15, humidity $ >  75\% $ , windy = false). Drugie prawdopodobieństwo jest wyższe, więc z prawdopodobieństwem $ 60\% $ konsultowany przykład zostaje przypisany do klasy "Don't Play"
 	
 \item Konsultowanie, gdy znany jest rozkład prawdopodobieństwa.
+	\\W przypadku przykładu ze znanym rozkładem prawdopodobieństwa analizowane są wszystkie gałęzie o niezerowym prawdopodobieństwie z wagami odpowiadającymi przypisanym danm wartośćiom prawdopodobieństwom. Analizowany przykład miał postać: P(sunny) = $ 0.8 $ , P(overcast) = $ 0.2 $ . Dlatego, jeśli wartość humidity była większa niż $ 75\% $ to algorytm przydzielał przykład z $ 20\% $ prawdopodobieństwem do klasy "Play" i $ 80 \% $ prawdopodobieństwem do klasy "Don't play". Ponieważ dla "humidity" mniejszej niż $ 75\% $ i "outlook" = "sunny" drzewo podejmuje decyzję "Play", taką samą jak przy "outlook" = "overcast", to prtawdopodobieństwa wtedy się sumują i lagorytm podejmuje decyzję "Play" z prawdopodobieństwem $ 100 \% $ .
+
 \end{itemize}
 
 \subsection{Różnica między \emph{gain ratio} a~\emph{info gain} w~praktyce}
