Dodane wykresy i dane do zadania 1.5, wymagają jeszcze poprawy estetycznej

--- a/sprawozdanie1/part1-trees.tex
+++ b/sprawozdanie1/part1-trees.tex
@@ -127,14 +127,23 @@ Każdy klient opisany jest za pomocą 15 atrybutóW, w tym 6 atrybutów przyjmuj
 
 \begin{itemize}
 \item średniego (po \emph{cross-validation}) rozmiaru drzewa uproszczonego,
+\\ \input{figures/part1/task5/rozmiar.tex}
 \item średniej trafności klasyfikowania drzewa uproszczonego na~zbiorze testującym,
+\\ \input{figures/part1/task5/trafnosc.tex}
+\\ \input{figures/part1/task5/file.tex}
 \item średniej estymaty błędu dla drzewa uproszczonego
+\\ \input{figures/part1/task5/estymata.tex}
 \end{itemize}
 
 ...w funkcji poziomu ufności (odnieś te wyniki do średniej charakterystyki drzewa oryginalnego, nieuproszczonego).
 
+
+
+
 \item Poszukiwanie optymalnej wielkości drzewa uproszczonego poprzez prepruning, tj.~manewrowanie minimalną licznością węzła (\emph{Minimum objects}). Dla zbioru \emph{CRX} przebadać przedział od~2 do~10.
 \item Analiza wygenerowanego drzewa: poszukiwanie słabych punktów (liści o~małym wsparciu, poddrzew które generują szczególnie dużo błędów, etc.).
+
+
 \end{itemize}
 
 \subsection{\emph{Windowing}}
